// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`formml declaration grammar > annotation > declare annotation 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > declare annotation with multiple parameters 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name",
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "value",
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > declare annotation with one parameter 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name",
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > parameters allow trailing comma 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "name",
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > can omit type hint 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > parameters can be any 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "AnyType",
            "name": "any"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "AnyType",
            "name": "any"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > parameters can be optional 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "NumType",
            "name": "num"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "optional": true,
          "type": {
            "$type": "AnyType",
            "name": "any"
          }
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > parameters can be primitive type "bool" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "BoolType",
            "name": "bool"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "BoolType",
            "name": "bool"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > parameters can be primitive type "datetime" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "DatetimeType",
            "name": "datetime"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "DatetimeType",
            "name": "datetime"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > parameters can be primitive type "decimal" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "DecimalType",
            "name": "decimal"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "DecimalType",
            "name": "decimal"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > parameters can be primitive type "num" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "NumType",
            "name": "num"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "NumType",
            "name": "num"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > parameters can be primitive type "text" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "parameters": [
        {
          "$type": "Parameter",
          "name": "param1",
          "type": {
            "$type": "TextType",
            "name": "text"
          },
          "optional": false
        },
        {
          "$type": "Parameter",
          "name": "param2",
          "type": {
            "$type": "TextType",
            "name": "text"
          },
          "optional": false
        }
      ]
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > return type can be any 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "returnType": {
        "$type": "AnyType",
        "name": "any"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > return type can be primitive type "bool" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "returnType": {
        "$type": "BoolType",
        "name": "bool"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > return type can be primitive type "datetime" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "returnType": {
        "$type": "DatetimeType",
        "name": "datetime"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > return type can be primitive type "decimal" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "returnType": {
        "$type": "DecimalType",
        "name": "decimal"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > return type can be primitive type "num" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "returnType": {
        "$type": "NumType",
        "name": "num"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;

exports[`formml declaration grammar > annotation > type hints > return type can be primitive type "text" 1`] = `
"{
  "$type": "FormMLDeclaration",
  "declarations": [
    {
      "$type": "AnnotationDeclaration",
      "name": "newAnnotation",
      "returnType": {
        "$type": "TextType",
        "name": "text"
      },
      "parameters": []
    }
  ],
  "typeDeclarations": []
}"
`;
